--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                     <div class="right wow fadeInRight" data-wow-duration="1s">
                         <form action="https://api.web3forms.com/submit" method="post">
                             <input type="hidden" name="access_key" value="83d746d7-9a98-419e-a299-d7b80318d10e">
-                            <input type="hidden" name="redirect" value="https://google.com">
+                            <input type="hidden" name="redirect" value="https://khalil-cse.github.io/protfolio/">
                         
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
                                 <div>
