technical word change

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     </div>
                     <div class="text-center md:text-left">
                         <div class="mb-[25px] lg:max-w-[440px]">
-                            <p class="text-custom text-xl md:text-2xl font-medium font-secondary wow fadeInUp" data-wow-duration="1s">Techincal Skills</p>
+                            <p class="text-custom text-xl md:text-2xl font-medium font-secondary wow fadeInUp" data-wow-duration="1s">Technical Skills</p>
                             <h3 class="md:text-[48px] text-[35px] leading-[1.25] mt-1.5 wow fadeInUp" data-wow-duration="1s"></h3>
                         </div>
                         <p class="text-muted dark:text-darkmuted lg:max-w-[485px] leading-[30px] mb-[47px] wow fadeInUp" data-wow-duration="1s">
