--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                         </div>
                         <div class="mt-[30px]">
                             <h3 class="text-2xl">Bsc. Engineering</h3>
-                            <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">Sylhet Engineering College</p>
+                            <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">Shahjalal University of Science and Technology</p>
                             <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">BSc in Computer Science Engineering. CGPA-3.45.</p>
-                            <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">January 2019-December 2024</p>
+                            <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">January 2019-December 2023</p>
                             
                         </div>
                     </div>
@@ -188,7 +188,7 @@
                         <div class="mt-[30px]">
                             <h3 class="text-2xl">HSC</h3>
                             <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">Govt Sahid Sohrawardi College</p>
-                            <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">Background: Science. GPA-4.25</p>
+                            <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">Background: Science</p>
                             <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">2016-2017</p>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                         <div class="mt-[30px]">
                             <h3 class="text-2xl">SSC</h3>
                             <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">Lakhai A.C.R.C Pilot High School</p>
-                            <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">Background: Science. GPA: 4.72</p>
+                            <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">Background: Science</p>
                             <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">2014-2015</p>
                         </div>
                     </div>
