--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <div class="mt-[30px]">
                             <h3 class="text-2xl">Bsc. Engineering</h3>
                             <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">Shahjalal University of Science and Technology</p>
-                            <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">BSc in Computer Science Engineering. CGPA-3.45.</p>
+                            <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">BSc in Computer Science & Engineering. CGPA-3.45.</p>
                             <p class="mx-auto text-muted dark:text-darkmuted mt-5 leading-[30px]">January 2019-December 2023</p>
                             
                         </div>
