--- a/index.html
+++ b/index.html
@@ -500,7 +500,8 @@
                                 </p>
                                 <p class="text-muted dark:text-darkmuted text-lg leading-[30px]">
                                     <h6>1 Journal paper(Published)</h6>
-                                    <h6>3 conference paper(Under Review)</h6>
+                                    <h6>2 conference paper(Accepted)</h6>
+                                    <h6>2 conference paper(Under Review)</h6>
                                 </p>
                             </div>
                         </div>
