--- a/index.html
+++ b/index.html
@@ -548,8 +548,8 @@
                                 </div>
                             </div>
                             <div class="mt-5">
-                                <p class="text-custom font-medium font-secondary"><a href="#">Under Review and Ongoing</a></p>
-                                <h4 class="mt-1 leading-[1.4] text-[21px]"><a href="#" class="hover:text-custom">3 conference paper</a></h4>
+                                <p class="text-custom font-medium font-secondary"><a href="#">Accepted</a></p>
+                                <h4 class="mt-1 leading-[1.4] text-[21px]"><a href="#" class="hover:text-custom">2 conference paper</a></h4>
                             </div>
                         </a>
                     </div>
@@ -563,8 +563,8 @@
                                 </div>
                             </div>
                             <div class="mt-5">
-                                <p class="text-custom font-medium font-secondary"><a href="#">Pipeline</a></p>
-                                <h4 class="mt-1 leading-[1.4] text-[21px]"><a href="#" class="hover:text-custom">Now, I am collaborating on several projects.</a></h4>
+                                <p class="text-custom font-medium font-secondary"><a href="#">Under Review on ongoing</a></p>
+                                <h4 class="mt-1 leading-[1.4] text-[21px]"><a href="#" class="hover:text-custom">2 conference paper.</a></h4>
                             </div>
                         </a>
                     </div>
