conference paper added

--- a/index.html
+++ b/index.html
@@ -548,8 +548,8 @@
                                 </div>
                             </div>
                             <div class="mt-5">
-                                <p class="text-custom font-medium font-secondary"><a href="#">Accepted</a></p>
-                                <h4 class="mt-1 leading-[1.4] text-[21px]"><a href="#" class="hover:text-custom">2 conference paper</a></h4>
+                                <p class="text-custom font-medium font-secondary"><a href="#">conference Paper(Published)</a></p>
+                                <h4 class="mt-1 leading-[1.4] text-[21px]"><a href="https://index.ieomsociety.org/index.cfm/item/55395" class="hover:text-custom">Improving Die-Casting Part Classification using Transfer Learning with Deep Convolutional Neural Networks</a></h4>
                             </div>
                         </a>
                     </div>
@@ -563,7 +563,7 @@
                                 </div>
                             </div>
                             <div class="mt-5">
-                                <p class="text-custom font-medium font-secondary"><a href="#">Under Review on ongoing</a></p>
+                                <p class="text-custom font-medium font-secondary"><a href="#">PotatoLeafNet: Deep Learning Approach for Potato Leaf Disease Identification</a></p>
                                 <h4 class="mt-1 leading-[1.4] text-[21px]"><a href="#" class="hover:text-custom">2 conference paper.</a></h4>
                             </div>
                         </a>
