--- a/index.html
+++ b/index.html
@@ -563,8 +563,8 @@
                                 </div>
                             </div>
                             <div class="mt-5">
-                                <p class="text-custom font-medium font-secondary"><a href="#">PotatoLeafNet: Deep Learning Approach for Potato Leaf Disease Identification</a></p>
-                                <h4 class="mt-1 leading-[1.4] text-[21px]"><a href="#" class="hover:text-custom">2 conference paper.</a></h4>
+                                <p class="text-custom font-medium font-secondary"><a href="#">Accepted</a></p>
+                                <h4 class="mt-1 leading-[1.4] text-[21px]"><a href="#" class="hover:text-custom">PotatoLeafNet: Deep Learning Approach for Potato Leaf Disease Identification.</a></h4>
                             </div>
                         </a>
                     </div>
