--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                             </div>
                             <div>
                                 <h5 class="md:text-[30px] text-[25px]">Email</h5>
-                                <p class="text-lg mt-1.5 text-muted dark:text-darkmuted leading-8">khalil.cse18@gmail.com</p>
+                                <p class="text-lg mt-1.5 text-muted dark:text-darkmuted leading-8">khalilur31@student.sust.edu</p>
                             </div>
                         </div>
                         <div class="flex items-center gap-[25px]">
@@ -612,7 +612,7 @@
                             </div>
                             <div>
                                 <h5 class="md:text-[30px] text-[25px]">Phone</h5>
-                                <p class="text-lg mt-1.5 text-muted dark:text-darkmuted leading-8">01644726069</p>
+                                <p class="text-lg mt-1.5 text-muted dark:text-darkmuted leading-8">016*******9</p>
                             </div>
                         </div>
                     </div>
