--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                     <li class="service"><a href="#service" class="font-medium hover:text-custom font-secondary ease-in-out duration-300 inline-block leading-6 p-2">Projects</a></li>
                                     <li class="blog"><a href="#blog" class="font-medium hover:text-custom font-secondary ease-in-out duration-300 inline-block leading-6 p-2">Reasearch & Publication</a></li>
                                     <li class="contact"><a href="#contact" class="font-medium hover:text-custom font-secondary ease-in-out duration-300 inline-block leading-6 p-2">Contact</a></li>
-                                    <a href="https://drive.google.com/file/d/1WaVPy-BKl5w4cqsp7c52RD64XLq7kTBO/view?usp=sharing/" class="btn-outline-custom relative">Download CV</a>
+                                    <a href="https://drive.google.com/file/d/1WaVPy-BKl5w4cqsp7c52RD64XLq7kTBO/view?usp=sharing" class="btn-outline-custom relative">Download CV</a>
                                 </ul>
                             </div>
                         </div>
@@ -69,7 +69,7 @@
                                 <li class="service"><a href="#service" class="text-base font-medium hover:text-custom font-secondary ease-in-out duration-300 inline-block leading-6 p-2">Projects</a></li>
                                 <li class="blog"><a href="#blog" class="text-base font-medium hover:text-custom font-secondary ease-in-out duration-300 inline-block leading-6 p-2">Projects and Skills</a></li>
                                 <li class="contact"><a href="#contact" class="text-base font-medium hover:text-custom font-secondary ease-in-out duration-300 inline-block leading-6 p-2">Contact</a></li>
-                                <a href="https://drive.google.com/file/d/1T0ySI0VhQt1-b3xcvoojOVnSvwapERL_/view?usp=sharing/" class="btn-outline-custom relative">Download CV</a>
+                                <a href="https://drive.google.com/file/d/1T0ySI0VhQt1-b3xcvoojOVnSvwapERL_/view?usp=sharing" class="btn-outline-custom relative">Download CV</a>
                             </ul>
                         </div>
                     </div>
